--- a/index.html
+++ b/index.html
@@ -5,28 +5,39 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Traffic Guardian | Monitoramento de Sites e Alertas 24/7 (Vitalício)</title>
-    <meta name="description" content="Receba alertas no Telegram e E-mail no segundo exato em que seu site cair. Monitoramento de uptime profissional. Pague uma vez, use para sempre. Sem mensalidades." />
-    <meta name="keywords" content="monitoramento de sites, uptime, site caiu, alerta telegram, ping monitor, status page, traffic guardian, vitalício, sem mensalidade" />
-    <meta name="author" content="Traffic Guardian" />
+    <title>Traffic Guardian | Monitoramento de Uptime e Alertas (Vitalício)</title>
+    <meta name="description" content="Seu site caiu? Receba alertas imediatos no Telegram. Monitoramento de uptime 24/7 sem mensalidades. Plano vitalício único de R$ 47,90." />
+    <meta name="keywords" content="monitoramento site, uptime robot, ping, status page, alerta queda site, traffic guardian, vitalício" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://trafficguardian.com.br/" />
+    <link rel="canonical" href="https://traffic-guardian-eight.vercel.app/" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://trafficguardian.com.br/" />
-    <meta property="og:title" content="Seu Site Caiu? O Traffic Guardian te avisa." />
-    <meta property="og:description" content="Pare de perder vendas. Monitoramento 24/7 com alertas imediatos. Plano Vitalício de R$ 47,90 (Oferta Limitada)." />
-    <meta property="og:image" content="https://trafficguardian.com.br/og-image.jpg" />
-    <meta property="og:site_name" content="Traffic Guardian" />
-
+    <meta property="og:url" content="https://traffic-guardian-eight.vercel.app/" />
+    <meta property="og:title" content="Traffic Guardian: Nunca mais perca vendas por site fora do ar." />
+    <meta property="og:description" content="Monitoramento profissional com alertas no Telegram. Pague uma vez, use para sempre." />
+    <meta property="og:image" content="https://traffic-guardian-eight.vercel.app/og-image.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Traffic Guardian | Monitoramento Vitalício" />
-    <meta name="twitter:description" content="Proteja seu site contra quedas. Alertas via Telegram em tempo real." />
-    <meta name="twitter:image" content="https://trafficguardian.com.br/og-image.jpg" />
 
-    <meta name="theme-color" content="#020617" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Traffic Guardian",
+      "operatingSystem": "Web",
+      "applicationCategory": "UtilitiesApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "47.90",
+        "priceCurrency": "BRL"
+      },
+      "description": "Sistema de monitoramento de uptime de sites com alertas via Telegram.",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "ratingCount": "120"
+      }
+    }
+    </script>
   </head>
   <body class="bg-gray-950">
     <div id="root"></div>
