alteracao index.html e dashboard.jsx

--- a/index.html
+++ b/index.html
@@ -5,36 +5,28 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Traffic Guardian | Monitoramento de Uptime e Alertas (Vitalício)</title>
-    <meta name="description" content="Seu site caiu? Receba alertas imediatos no Telegram. Monitoramento de uptime 24/7 sem mensalidades. Plano vitalício único de R$ 47,90." />
-    <meta name="keywords" content="monitoramento site, uptime robot, ping, status page, alerta queda site, traffic guardian, vitalício" />
-    <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://traffic-guardian-eight.vercel.app/" />
+    <title>Traffic Guardian | Monitoramento de Uptime Vitalício</title>
+    <meta name="description" content="Receba alertas no Telegram quando seu site cair. Monitoramento 24/7. Plano vitalício único de R$ 47,90." />
+    <meta name="keywords" content="monitoramento uptime, site caiu, traffic guardian, status page" />
+    <link rel="canonical" href="https://traffic-guardian.com.br/" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://traffic-guardian-eight.vercel.app/" />
-    <meta property="og:title" content="Traffic Guardian: Nunca mais perca vendas por site fora do ar." />
-    <meta property="og:description" content="Monitoramento profissional com alertas no Telegram. Pague uma vez, use para sempre." />
-    <meta property="og:image" content="https://traffic-guardian-eight.vercel.app/og-image.jpg" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:url" content="https://traffic-guardian.com.br/" />
+    <meta property="og:title" content="Traffic Guardian: Alertas de Queda de Site" />
+    <meta property="og:description" content="Não perca vendas. Saiba na hora se seu site sair do ar." />
+    <meta property="og:image" content="/og-image.jpg" />
 
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "SoftwareApplication",
       "name": "Traffic Guardian",
-      "operatingSystem": "Web",
       "applicationCategory": "UtilitiesApplication",
+      "operatingSystem": "Web",
       "offers": {
         "@type": "Offer",
         "price": "47.90",
         "priceCurrency": "BRL"
-      },
-      "description": "Sistema de monitoramento de uptime de sites com alertas via Telegram.",
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.8",
-        "ratingCount": "120"
       }
     }
     </script>
